Removed unneeded Resources directory, established general classes to styles.scss, added angular library to /public/index.html

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>HUGE NavExercise</title>
   <link rel="stylesheet" href="/styles/main.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
 </head>
 <body>
 <h1>Hello.</h1>
