--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,13 @@
 <head>
   <title>HUGE NavExercise</title>
   <link rel="stylesheet" href="/styles/main.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script src="/js/functions.js" type="text/javascript"></script>
 </head>
 <body>
-<h1>Hello.</h1>
+	<div id="nav"></div>
+	<div id="feat">
+		<h1>get paid for giving a poop.</h1>
+	</div>
 </body>
 </html>
