--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,17 @@
 <body>
 	<div id="nav"></div>
 	<div id="feat">
-		<h1>get paid for giving a poop.</h1>
+		<div class="container tab">
+			<h1 class="tabc">Get paid for giving a shit.</h1>
+		</div>
+	</div>
+	<div class="content">
+		<div class="container">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Did you enjoy your lunch, mom? You drank it fast enough. She's trying to prove that she's closer to my children than I am, but the joke's on her, because she doesn't know how little I care for GOB. And guess what else is back. [slow wink] My breakfast? My friskiness. Mama horny Michael. Monday morning. COME ON! If mother sees this, she will blow a cow. I think that's one of Mom's little fibs, you know, like I'll sacrifice anything for my children. Yes, Annyong. Your name is Annyong! We all know you're Annyong!</p>
+
+			<p>Oh, yes, there absolutely will be a margarita made in my mouth. Interfere? I ought to pull down your pants and spank your ass raw. Michael: I'm sorry, have we met? It's so watery. And yet there's a smack of ham to it. It looks like you've been looking for dragons… in the future. Ann, you need to decide whether you want a man or a boy. I know how I'd answer. It's ok. You be with Yam. It was the first taste of alcohol Buster had since he was nursing.</p>
+		</div>
 	</div>
 </body>
+<div id="resNav"></div>
 </html>
