--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
   <script src="/js/functions.js" type="text/javascript"></script>
 </head>
 <body>
-	<div id="nav"></div>
+	<div class="header">
+		<div id="nav"></div>
+	</div>
 	<div id="feat">
 		<div class="container tab">
 			<h1 class="tabc">Get paid for giving a shit.</h1>
@@ -22,4 +24,19 @@
 	</div>
 </body>
 <div id="resNav"></div>
+<a class="menuToggle" href="#">
+	<svg class="tog open fullopacity" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+		 width="72px" height="72px" viewBox="0 0 72 72" enable-background="new 0 0 72 72" xml:space="preserve">
+		<g>
+			<rect x="24" y="26" fill="#FFFFFF" width="24" height="4"/>
+			<rect x="24" y="34" fill="#FFFFFF" width="24" height="4"/>
+			<rect x="24" y="42" fill="#FFFFFF" width="24" height="4"/>
+		</g>
+	</svg>
+	<svg class="tog close noopacity" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+		 width="72px" height="72px" viewBox="0 0 72 72" enable-background="new 0 0 72 72" xml:space="preserve">
+		<polygon fill="#FFFFFF" points="38.854,35.977 45.9,28.929 43.071,26.1 35.975,33.196 28.758,26.227 25.979,29.104 33.146,36.025 
+			26.101,43.07 28.93,45.899 36.024,38.805 43.243,45.775 46.021,42.898 "/>
+	</svg>
+</a>
 </html>
