--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <title>HUGE NavExercise</title>
   <link rel="stylesheet" href="/styles/main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <script src="/js/functions.js" type="text/javascript"></script>
 </head>
 <body>
