--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 		<div class="mask"></div>
 		<div id="feat">
 			<div class="container tab">
-				<h1 class="tabc">Get paid for giving a poop.</h1>
+				<h1 class="tabc">Get paid for giving a shit.</h1>
 			</div>
 		</div>
 		<div class="content">
